--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       style="background-color: #277bc0"
     >
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Pimpaka Joungthong</span>
+        <span class="d-block d-lg-none">Joungthong</span>
         <span class="d-none d-lg-block"
           ><img
             class="img-fluid img-profile rounded-circle mx-auto mb-2"
