--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       style="background-color: #277bc0"
     >
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Joungthong</span>
+        <span class="d-block d-lg-none">Pimpaka Joungthong</span>
         <span class="d-none d-lg-block"
           ><img
             class="img-fluid img-profile rounded-circle mx-auto mb-2"
@@ -87,7 +87,7 @@
         <div class="resume-section-content">
           <h1 class="mb-0">
             Pimpaka
-            <span style="color: #ffb200">Joungthong</span>
+            <span style="color: #ffb200">Pimpaka Joungthong</span>
           </h1>
           <h4>
             Tel: (+66) 64-864-6446
@@ -227,6 +227,18 @@
                   (2022)
                 </a>
               </li>
+              <li>
+                <span class="fa-li"
+                  ><i class="fas fa-paw text-secondary"></i
+                ></span>
+                <a
+                  href="https://drive.google.com/file/d/1C_6P03MlrQ2buJfgs9mF8TkP9kK8bWcP/view?usp=sharing"
+                  target="_blank"
+                >
+                  Certificate of Achievement in Build Web Application From Start
+                  to Pro Course (2022)
+                </a>
+              </li>
             </ul>
           </div>
         </div>
@@ -236,6 +248,166 @@
       <section class="resume-section" id="Portfolio">
         <div class="resume-section-content">
           <h2 class="mb-5">Portfolio</h2>
+
+          <div class="row row-cols-1 row-cols-md-3 g-4">
+            <!--First card-->
+            <div class="col">
+              <div
+                class="card h-100"
+                data-bs-toggle="modal"
+                data-bs-target="#firstModal"
+              >
+                <img
+                  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgS3dGo7ir6Pvp2Nzt6pxTyrTtOlP_3TIS3w&usqp=CAU"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h5 class="card-title">PHP project</h5>
+                  <p class="card-text">
+                    This is a longer card with supporting text below as a
+                    natural lead-in to additional content. This content is a
+                    little bit longer.
+                  </p>
+
+                  <!-- The Modal -->
+                  <div class="modal" id="firstModal">
+                    <div class="modal-dialog modal-dialog-centered">
+                      <div class="modal-content">
+                        <!-- Modal Header -->
+                        <div class="modal-header">
+                          <h4 class="modal-title">Modal 1</h4>
+                          <button
+                            type="button"
+                            class="btn-close"
+                            data-bs-dismiss="modal"
+                          ></button>
+                        </div>
+
+                        <!-- Modal body -->
+                        <div class="modal-body">Modal body..</div>
+
+                        <!-- Modal footer -->
+                        <div class="modal-footer">
+                          <button
+                            type="button"
+                            class="btn btn-danger"
+                            data-bs-dismiss="modal"
+                          >
+                            Close
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!--Second card-->
+            <div class="col">
+              <div
+                class="card h-100 d-flex flex-column"
+                data-bs-toggle="modal"
+                data-bs-target="#secondModal"
+              >
+                <img
+                  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgS3dGo7ir6Pvp2Nzt6pxTyrTtOlP_3TIS3w&usqp=CAU"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a short card.</p>
+
+                  <!-- The Modal -->
+                  <div class="modal" id="secondModal">
+                    <div class="modal-dialog modal-dialog-centered">
+                      <div class="modal-content">
+                        <!-- Modal Header -->
+                        <div class="modal-header">
+                          <h4 class="modal-title">Modal 2</h4>
+                          <button
+                            type="button"
+                            class="btn-close"
+                            data-bs-dismiss="modal"
+                          ></button>
+                        </div>
+
+                        <!-- Modal body -->
+                        <div class="modal-body">Modal body..</div>
+
+                        <!-- Modal footer -->
+                        <div class="modal-footer">
+                          <button
+                            type="button"
+                            class="btn btn-danger"
+                            data-bs-dismiss="modal"
+                          >
+                            Close
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!--Third card-->
+            <div class="col">
+              <div
+                class="card h-100"
+                data-bs-toggle="modal"
+                data-bs-target="#thirdModal"
+              >
+                <img
+                  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgS3dGo7ir6Pvp2Nzt6pxTyrTtOlP_3TIS3w&usqp=CAU"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">
+                    This is a longer card with supporting text below as a
+                    natural lead-in to additional content.
+                  </p>
+                  <!-- The Modal -->
+                  <div class="modal" id="thirdModal">
+                    <div class="modal-dialog modal-dialog-centered">
+                      <div class="modal-content">
+                        <!-- Modal Header -->
+                        <div class="modal-header">
+                          <h4 class="modal-title">Modal 3</h4>
+                          <button
+                            type="button"
+                            class="btn-close"
+                            data-bs-dismiss="modal"
+                          ></button>
+                        </div>
+
+                        <!-- Modal body -->
+                        <div class="modal-body">Modal body..</div>
+
+                        <!-- Modal footer -->
+                        <div class="modal-footer">
+                          <button
+                            type="button"
+                            class="btn btn-danger"
+                            data-bs-dismiss="modal"
+                          >
+                            Close
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!--Link-->
+
           <a
             href="https://replit.com/join/zzojzqtzrw-pimpakajoungth1"
             target="_blank"
