update card and css

--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
   <body id="page-top">
     <!-- Navigation-->
     <nav
-      class="navbar navbar-expand-lg navbar-dark fixed-top"
+      class="navbar navbar-expand-lg navbar-dark fixed-top mainBackground"
       id="sideNav"
-      style="background-color: #277bc0"
     >
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none">Pimpaka Joungthong</span>
@@ -87,7 +86,7 @@
         <div class="resume-section-content">
           <h1 class="mb-0">
             Pimpaka
-            <span style="color: #ffb200">Pimpaka Joungthong</span>
+            <span class="mainColor">Pimpaka Joungthong</span>
           </h1>
           <h4>
             Tel: (+66) 64-864-6446
@@ -108,9 +107,13 @@
             <a
               class="social-icon"
               href="https://www.linkedin.com/in/pimpakajou/"
+              target="_blank"
               ><i class="fab fa-linkedin-in"></i
             ></a>
-            <a class="social-icon" href="https://github.com/PraySSS"
+            <a
+              class="social-icon"
+              href="https://github.com/PraySSS"
+              target="_blank"
               ><i class="fab fa-github"></i
             ></a>
           </div>
@@ -131,7 +134,7 @@
               <p>Support senior on Front-end with React and TypeScript.</p>
             </div>
             <div class="flex-shrink-0">
-              <span style="color: #ffb200">Jan 2022 - May 2022 (4 months)</span>
+              <span class="mainColor">Jan 2022 - May 2022 (4 months)</span>
             </div>
           </div>
 
@@ -148,7 +151,7 @@
               <p>GPA: 3.30</p>
             </div>
             <div class="flex-shrink-0">
-              <span style="color: #ffb200">2018 - 2022</span>
+              <span class="mainColor">2018 - 2022</span>
             </div>
           </div>
         </div>
@@ -260,14 +263,13 @@
                 <img
                   src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgS3dGo7ir6Pvp2Nzt6pxTyrTtOlP_3TIS3w&usqp=CAU"
                   class="card-img-top"
-                  alt="..."
+                  alt="protein"
                 />
                 <div class="card-body">
-                  <h5 class="card-title">PHP project</h5>
+                  <h5 class="card-title">Protein calculate</h5>
                   <p class="card-text">
-                    This is a longer card with supporting text below as a
-                    natural lead-in to additional content. This content is a
-                    little bit longer.
+                    This project used basic php to calculate protein that you
+                    should take per day
                   </p>
 
                   <!-- The Modal -->
@@ -276,7 +278,7 @@
                       <div class="modal-content">
                         <!-- Modal Header -->
                         <div class="modal-header">
-                          <h4 class="modal-title">Modal 1</h4>
+                          <h4 class="modal-title">Protein calculate</h4>
                           <button
                             type="button"
                             class="btn-close"
@@ -285,7 +287,18 @@
                         </div>
 
                         <!-- Modal body -->
-                        <div class="modal-body">Modal body..</div>
+                        <div class="modal-body">
+                          <a
+                            href="https://replit.com/join/zzojzqtzrw-pimpakajoungth1"
+                            target="_blank"
+                            >PHP project</a
+                          >
+                          <a
+                            href="https://proteincheck.pimpakajoungth1.repl.co/"
+                            target="_blank"
+                            >PHP source code</a
+                          >
+                        </div>
 
                         <!-- Modal footer -->
                         <div class="modal-footer">
@@ -314,11 +327,11 @@
                 <img
                   src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgS3dGo7ir6Pvp2Nzt6pxTyrTtOlP_3TIS3w&usqp=CAU"
                   class="card-img-top"
-                  alt="..."
+                  alt="traindog"
                 />
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a short card.</p>
+                  <h5 class="card-title">TrainDog</h5>
+                  <p class="card-text">The Front-end project with bootstrap</p>
 
                   <!-- The Modal -->
                   <div class="modal" id="secondModal">
@@ -326,7 +339,7 @@
                       <div class="modal-content">
                         <!-- Modal Header -->
                         <div class="modal-header">
-                          <h4 class="modal-title">Modal 2</h4>
+                          <h4 class="modal-title">TrainDog</h4>
                           <button
                             type="button"
                             class="btn-close"
@@ -335,8 +348,19 @@
                         </div>
 
                         <!-- Modal body -->
-                        <div class="modal-body">Modal body..</div>
 
+                        <div class="modal-body">
+                          <a
+                            href="https://praysss.github.io/bootstrap-lab/"
+                            target="_blank"
+                            >TrainDog project</a
+                          >
+                          <a
+                            href="https://github.com/PraySSS/bootstrap-lab"
+                            target="_blank"
+                            >TrainDog Source code</a
+                          >
+                        </div>
                         <!-- Modal footer -->
                         <div class="modal-footer">
                           <button
@@ -363,7 +387,7 @@
                 <img
                   src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgS3dGo7ir6Pvp2Nzt6pxTyrTtOlP_3TIS3w&usqp=CAU"
                   class="card-img-top"
-                  alt="..."
+                  alt="crud-express"
                 />
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
@@ -386,8 +410,18 @@
                         </div>
 
                         <!-- Modal body -->
-                        <div class="modal-body">Modal body..</div>
-
+                        <div class="modal-body">
+                          <a
+                            href="https://pimpaka-jou.herokuapp.com/users"
+                            target="_blank"
+                            >CRUD with Express</a
+                          >
+                          <a
+                            href="https://github.com/PraySSS/portfolio"
+                            target="_blank"
+                            >Express Source code</a
+                          >
+                        </div>
                         <!-- Modal footer -->
                         <div class="modal-footer">
                           <button
@@ -407,20 +441,6 @@
           </div>
 
           <!--Link-->
-
-          <a
-            href="https://replit.com/join/zzojzqtzrw-pimpakajoungth1"
-            target="_blank"
-            >PHP project</a
-          >
-          <a
-            href="https://proteincheck.pimpakajoungth1.repl.co/"
-            target="_blank"
-            >PHP source code</a
-          >
-          <a href=" https://pimpaka-jou.herokuapp.com/users" target="_blank"
-            >CRUD with Express</a
-          >
         </div>
       </section>
       <hr class="m-0" />
