--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Resume</title>
+    <title>Pimpaka J.</title>
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script
@@ -41,7 +41,7 @@
           ><img
             class="img-fluid img-profile rounded-circle mx-auto mb-2"
             src="assets/img/profile.jpg"
-            alt="..."
+            alt="avatar"
         /></span>
       </a>
       <button
@@ -289,12 +289,12 @@
                         <!-- Modal body -->
                         <div class="modal-body">
                           <a
-                            href="https://replit.com/join/zzojzqtzrw-pimpakajoungth1"
+                            href="https://proteincheck.pimpakajoungth1.repl.co/"
                             target="_blank"
                             >PHP project</a
                           >
                           <a
-                            href="https://proteincheck.pimpakajoungth1.repl.co/"
+                            href="https://replit.com/join/zzojzqtzrw-pimpakajoungth1"
                             target="_blank"
                             >PHP source code</a
                           >
@@ -390,10 +390,10 @@
                   alt="crud-express"
                 />
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">CRUD Users</h5>
                   <p class="card-text">
-                    This is a longer card with supporting text below as a
-                    natural lead-in to additional content.
+                    CRUD to manage users used express.js, node.js, mongoDB and
+                    Heroku
                   </p>
                   <!-- The Modal -->
                   <div class="modal" id="thirdModal">
@@ -401,7 +401,7 @@
                       <div class="modal-content">
                         <!-- Modal Header -->
                         <div class="modal-header">
-                          <h4 class="modal-title">Modal 3</h4>
+                          <h4 class="modal-title">CRUD Users</h4>
                           <button
                             type="button"
                             class="btn-close"
@@ -414,12 +414,12 @@
                           <a
                             href="https://pimpaka-jou.herokuapp.com/users"
                             target="_blank"
-                            >CRUD with Express</a
+                            >CRUD users page</a
                           >
                           <a
                             href="https://github.com/PraySSS/portfolio"
                             target="_blank"
-                            >Express Source code</a
+                            >CRUD Source code</a
                           >
                         </div>
                         <!-- Modal footer -->
