update portfolio cards

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 BACHELOR OF INFORMATION TECHNOLOGY
               </div>
               <div>Major in Software Engineering</div>
-              <p>GPA: 3.30</p>
+              <p>GPAX: 3.30</p>
             </div>
             <div class="flex-shrink-0">
               <span class="mainColor">2018 - 2022</span>
@@ -261,24 +261,24 @@
                 data-bs-target="#firstModal"
               >
                 <img
-                  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgS3dGo7ir6Pvp2Nzt6pxTyrTtOlP_3TIS3w&usqp=CAU"
+                  src="./assets/img/protein.png"
                   class="card-img-top"
                   alt="protein"
                 />
                 <div class="card-body">
-                  <h5 class="card-title">Protein calculate</h5>
+                  <h5 class="card-title">Protein check</h5>
                   <p class="card-text">
-                    This project used basic php to calculate protein that you
-                    should take per day
+                    Calculator project to calculate protein that you should take
+                    per day
                   </p>
 
                   <!-- The Modal -->
                   <div class="modal" id="firstModal">
-                    <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-dialog modal-dialog-centered modal-lg">
                       <div class="modal-content">
                         <!-- Modal Header -->
                         <div class="modal-header">
-                          <h4 class="modal-title">Protein calculate</h4>
+                          <h4 class="modal-title">Protein check</h4>
                           <button
                             type="button"
                             class="btn-close"
@@ -287,28 +287,43 @@
                         </div>
 
                         <!-- Modal body -->
-                        <div class="modal-body">
-                          <a
-                            href="https://proteincheck.pimpakajoungth1.repl.co/"
-                            target="_blank"
-                            >PHP project</a
-                          >
-                          <a
-                            href="https://replit.com/join/zzojzqtzrw-pimpakajoungth1"
-                            target="_blank"
-                            >PHP source code</a
-                          >
+                        <div class="col text-center">
+                          <div class="modal-body">
+                            <img
+                              class="modal-image"
+                              src="./assets/img/protein.png"
+                              alt="protein"
+                            />
+                            <div class="col-9 mx-auto">
+                              This project used basic PHP and bootstrap to
+                              create
+                            </div>
+                          </div>
                         </div>
 
                         <!-- Modal footer -->
                         <div class="modal-footer">
-                          <button
-                            type="button"
-                            class="btn btn-danger"
-                            data-bs-dismiss="modal"
-                          >
-                            Close
-                          </button>
+                          <div class="col text-center">
+                            <a
+                              href="https://proteincheck.pimpakajoungth1.repl.co/"
+                              target="_blank"
+                            >
+                              <button
+                                type="button"
+                                class="btn btn-info btn-space"
+                              >
+                                DEMO
+                              </button></a
+                            >
+                            <a
+                              href="https://replit.com/join/zzojzqtzrw-pimpakajoungth1"
+                              target="_blank"
+                            >
+                              <button type="button" class="btn btn-warning">
+                                Source Code
+                              </button></a
+                            >
+                          </div>
                         </div>
                       </div>
                     </div>
@@ -325,7 +340,7 @@
                 data-bs-target="#secondModal"
               >
                 <img
-                  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgS3dGo7ir6Pvp2Nzt6pxTyrTtOlP_3TIS3w&usqp=CAU"
+                  src="./assets/img/traindog.png"
                   class="card-img-top"
                   alt="traindog"
                 />
@@ -335,7 +350,7 @@
 
                   <!-- The Modal -->
                   <div class="modal" id="secondModal">
-                    <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-dialog modal-dialog-centered modal-lg">
                       <div class="modal-content">
                         <!-- Modal Header -->
                         <div class="modal-header">
@@ -348,28 +363,43 @@
                         </div>
 
                         <!-- Modal body -->
-
-                        <div class="modal-body">
-                          <a
-                            href="https://praysss.github.io/bootstrap-lab/"
-                            target="_blank"
-                            >TrainDog project</a
-                          >
-                          <a
-                            href="https://github.com/PraySSS/bootstrap-lab"
-                            target="_blank"
-                            >TrainDog Source code</a
-                          >
+                        <div class="col text-center">
+                          <div class="modal-body">
+                            <img
+                              class="modal-image"
+                              src="./assets/img/traindog.png"
+                              alt="traindog"
+                            />
+                            <div class="col-9 mx-auto">
+                              This project contained only Front-end with
+                              Bootstrap which is not yet connected to the
+                              Back-end.
+                            </div>
+                          </div>
                         </div>
                         <!-- Modal footer -->
                         <div class="modal-footer">
-                          <button
-                            type="button"
-                            class="btn btn-danger"
-                            data-bs-dismiss="modal"
-                          >
-                            Close
-                          </button>
+                          <div class="col text-center">
+                            <a
+                              href="https://praysss.github.io/bootstrap-lab/"
+                              target="_blank"
+                            >
+                              <button
+                                type="button"
+                                class="btn btn-info btn-space"
+                              >
+                                DEMO
+                              </button></a
+                            >
+                            <a
+                              href="https://github.com/PraySSS/bootstrap-lab"
+                              target="_blank"
+                            >
+                              <button type="button" class="btn btn-warning">
+                                Source Code
+                              </button></a
+                            >
+                          </div>
                         </div>
                       </div>
                     </div>
@@ -385,19 +415,16 @@
                 data-bs-target="#thirdModal"
               >
                 <img
-                  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgS3dGo7ir6Pvp2Nzt6pxTyrTtOlP_3TIS3w&usqp=CAU"
+                  src="./assets/img/crud.png"
                   class="card-img-top"
                   alt="crud-express"
                 />
                 <div class="card-body">
                   <h5 class="card-title">CRUD Users</h5>
-                  <p class="card-text">
-                    CRUD to manage users used express.js, node.js, mongoDB and
-                    Heroku
-                  </p>
+                  <p class="card-text">The project CRUD manage users</p>
                   <!-- The Modal -->
                   <div class="modal" id="thirdModal">
-                    <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-dialog modal-dialog-centered modal-lg">
                       <div class="modal-content">
                         <!-- Modal Header -->
                         <div class="modal-header">
@@ -410,27 +437,44 @@
                         </div>
 
                         <!-- Modal body -->
-                        <div class="modal-body">
-                          <a
-                            href="https://pimpaka-jou.herokuapp.com/users"
-                            target="_blank"
-                            >CRUD users page</a
-                          >
-                          <a
-                            href="https://github.com/PraySSS/portfolio"
-                            target="_blank"
-                            >CRUD Source code</a
-                          >
+                        <div class="col text-center">
+                          <div class="modal-body">
+                            <img
+                              class="modal-image"
+                              src="./assets/img/crud.png"
+                              alt="crud"
+                            />
+                            <div class="col-9 mx-auto">
+                              This project is CRUD manage users and used
+                              express.js, node.js, MongoDB, and Heroku to create
+                              the project.
+                            </div>
+                          </div>
                         </div>
                         <!-- Modal footer -->
+
                         <div class="modal-footer">
-                          <button
-                            type="button"
-                            class="btn btn-danger"
-                            data-bs-dismiss="modal"
-                          >
-                            Close
-                          </button>
+                          <div class="col text-center">
+                            <a
+                              href="https://pimpaka-jou.herokuapp.com/users"
+                              target="_blank"
+                            >
+                              <button
+                                type="button"
+                                class="btn btn-info btn-space"
+                              >
+                                DEMO
+                              </button></a
+                            >
+                            <a
+                              href="https://github.com/PraySSS/portfolio"
+                              target="_blank"
+                            >
+                              <button type="button" class="btn btn-warning">
+                                Source Code
+                              </button></a
+                            >
+                          </div>
                         </div>
                       </div>
                     </div>
