custom margin bottom

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                         <div class="col text-center">
                           <div class="modal-body">
                             <img
-                              class="modal-image"
+                              class="modal-image mb-3"
                               src="./assets/img/protein.png"
                               alt="protein"
                             />
@@ -366,7 +366,7 @@
                         <div class="col text-center">
                           <div class="modal-body">
                             <img
-                              class="modal-image"
+                              class="modal-image mb-3"
                               src="./assets/img/traindog.png"
                               alt="traindog"
                             />
@@ -440,7 +440,7 @@
                         <div class="col text-center">
                           <div class="modal-body">
                             <img
-                              class="modal-image"
+                              class="modal-image mb-3"
                               src="./assets/img/crud.png"
                               alt="crud"
                             />
