--- a/index.html
+++ b/index.html
@@ -482,6 +482,86 @@
                 </div>
               </div>
             </div>
+
+            <!--Fourth card-->
+            <div class="col">
+              <div
+                class="card h-100"
+                data-bs-toggle="modal"
+                data-bs-target="#fourthModal"
+              >
+                <img
+                  src="./assets/img/dindinpic.png"
+                  class="card-img-top logoImg"
+                  alt="dindinlogo"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Landing With DinDin</h5>
+                  <p class="card-text">My senior chatbot application project</p>
+                  <!-- The Modal -->
+                  <div class="modal" id="fourthModal">
+                    <div class="modal-dialog modal-dialog-centered modal-lg">
+                      <div class="modal-content">
+                        <!-- Modal Header -->
+                        <div class="modal-header">
+                          <h4 class="modal-title">Landing With DinDin</h4>
+                          <button
+                            type="button"
+                            class="btn-close"
+                            data-bs-dismiss="modal"
+                          ></button>
+                        </div>
+
+                        <!-- Modal body -->
+                        <div class="col text-center">
+                          <div class="modal-body">
+                            <img
+                              class="mobileImg mb-3"
+                              src="./assets/img/dindinchat.png"
+                              alt="dindin"
+                            />
+                            <img
+                              class="mobileImg mb-3"
+                              src="./assets/img/dindinmap.png"
+                              alt="dindin"
+                            />
+                            <img
+                              class="mobileImg mb-3"
+                              src="./assets/img/dindin.png"
+                              alt="dindin"
+                            />
+                            <div class="col-9 mx-auto">
+                              Landing with DinDin is an application chatbot use
+                              React, Firebase, and Dialogflow to develop. This
+                              is my senior project in my college before I
+                              graduated but the dependencies are outdated and
+                              make the application can't run at present.
+                            </div>
+                          </div>
+                        </div>
+                        <!-- Modal footer -->
+
+                        <div class="modal-footer">
+                          <div class="col text-center">
+                            <a
+                              href="https://drive.google.com/file/d/11KVyCjwfhWU9OFqYWgrHcEPjFjxnWTr2/view?usp=share_link"
+                              target="_blank"
+                            >
+                              <button
+                                type="button"
+                                class="btn btn-info btn-space"
+                              >
+                                View Full Document
+                              </button></a
+                            >
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
 
           <!--Link-->
