add scroll animation

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <!-- Page Content-->
     <div class="container-fluid p-0">
       <!-- About-->
-      <section class="resume-section" id="about">
+      <section class="resume-section hidden" id="about">
         <div class="resume-section-content">
           <h1 class="mb-0">
             Pimpaka
@@ -121,7 +121,7 @@
       </section>
       <hr class="m-0" />
       <!-- Experience-->
-      <section class="resume-section" id="experience">
+      <section class="resume-section hidden" id="experience">
         <div class="resume-section-content">
           <h2 class="mb-5">Experience</h2>
 
@@ -159,7 +159,7 @@
       <hr class="m-0" />
 
       <!-- Skills-->
-      <section class="resume-section" id="skills">
+      <section class="resume-section hidden" id="skills">
         <div class="resume-section-content">
           <h2 class="mb-5">Skills</h2>
           <div class="subheading mb-3">Programming Languages & Tools</div>
@@ -248,7 +248,7 @@
       </section>
       <hr class="m-0" />
       <!-- Portfolio-->
-      <section class="resume-section" id="Portfolio">
+      <section class="resume-section hidden" id="Portfolio">
         <div class="resume-section-content">
           <h2 class="mb-5">Portfolio</h2>
 
