add scroll animation to col

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
           <div class="row row-cols-1 row-cols-md-3 g-4">
             <!--First card-->
-            <div class="col">
+            <div class="col hidden">
               <div
                 class="card h-100"
                 data-bs-toggle="modal"
@@ -333,7 +333,7 @@
             </div>
 
             <!--Second card-->
-            <div class="col">
+            <div class="col hidden">
               <div
                 class="card h-100 d-flex flex-column"
                 data-bs-toggle="modal"
@@ -408,7 +408,7 @@
               </div>
             </div>
             <!--Third card-->
-            <div class="col">
+            <div class="col hidden">
               <div
                 class="card h-100"
                 data-bs-toggle="modal"
@@ -484,7 +484,7 @@
             </div>
 
             <!--Fourth card-->
-            <div class="col">
+            <div class="col hidden">
               <div
                 class="card h-100"
                 data-bs-toggle="modal"
