--- a/index.html
+++ b/index.html
@@ -446,8 +446,8 @@
                             />
                             <div class="col-9 mx-auto">
                               This project is CRUD manage users and used
-                              express.js, node.js, MongoDB, and Heroku to create
-                              the project.
+                              express.js, node.js and MongoDB to create the
+                              project.
                             </div>
                           </div>
                         </div>
@@ -456,7 +456,7 @@
                         <div class="modal-footer">
                           <div class="col text-center">
                             <a
-                              href="https://pimpaka-jou.herokuapp.com/users"
+                              href="https://express-with-mongodb.onrender.com/users"
                               target="_blank"
                             >
                               <button
