--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="resume-section-content">
           <h1 class="mb-0">
             Pimpaka
-            <span class="mainColor">Pimpaka Joungthong</span>
+            <span class="mainColor">Joungthong</span>
           </h1>
           <h4>
             Tel: (+66) 64-864-6446
